tests/errors/UndefinedClass.java
class UndefinedClass
{
    public static void main(String[] a)
    {
		System.out.println(new Test());
    }
}
